rename module name

--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-Revision history for Perl extension Spork::S5ThemeRedSimple
+Revision history for Perl extension Spork::S5ThemeNotebook
 
 0.01
    Wed Dec 14 18:44:57 2011
