--- a/README
+++ b/README
@@ -24,4 +24,4 @@ Spork::S5ThemeNotebook documentation is available as in POD. So you can do:
 
 to read the documentation online with your favorite pager.
 
-Atsushi Kobayashi
+Masayuki Matsuki
